# calc-lib-linking

./: CMakeLists.txt  README_BUILD.md  SHAPE_SYSTEM_GUIDE.md  build-debug.sh  build-release.sh  build.bat  build.sh  startGraphics.sh
include/calc/: calc.h
include/graphics/: graphics.h
libraries/: SDL3.lib
src/calc/: calc.c  calc.cpp
src/calcx/: calcx.c  calcx.cpp
src/graphics/: graphics.cpp  shape.cpp
